--- a/sample.bib
+++ b/sample.bib
@@ -18,3 +18,9 @@
   year={1975},
   publisher={IEEE}
 }
+
+@ONLINE {leol,
+    title = "League of Legends",
+    year  = "2018",
+    url   = "https://centraldeaprendizado.br.leagueoflegends.com/videos/rotas"
+}
